--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/sdbus-cpp"]
 	path = external/sdbus-cpp
 	url = https://github.com/Kistler-Group/sdbus-cpp.git
+[submodule "external/di"]
+	path = external/di
+	url = https://github.com/boost-ext/di.git
