--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,17 +1,25 @@
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error")
+
 add_subdirectory(process-cpp-minimal)
 add_subdirectory(android-emugl)
 add_subdirectory(xdg)
 add_subdirectory(backward-cpp)
 
-set(BUILD_TESTING OFF)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error")
-add_subdirectory(cpu_features)
 include(ExternalProject)
+
+ExternalProject_Add(CpuFeatures
+	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/cpu_features"
+	INSTALL_COMMAND ""
+	CMAKE_CACHE_ARGS
+		-DBUILD_SHARED_LIBS:BOOL=OFF
+		-DBUILD_TESTING:BOOL=OFF
+)
+
 ExternalProject_Add(sdbus-cpp
-  PREFIX sdbus-cpp
-  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/sdbus-cpp"
-  INSTALL_COMMAND ""
-  CMAKE_CACHE_ARGS
-        -DBUILD_CODE_GEN:BOOL=ON
-        -DBUILD_SHARED_LIBS:BOOL=OFF
+	PREFIX sdbus-cpp
+	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/sdbus-cpp"
+	INSTALL_COMMAND ""
+	CMAKE_CACHE_ARGS
+		-DBUILD_CODE_GEN:BOOL=ON
+		-DBUILD_SHARED_LIBS:BOOL=OFF
 )
