WIP: make sure you can build with yocto

--- a/external/android-emugl/host/CMakeLists.txt
+++ b/external/android-emugl/host/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_subdirectory(tools)
+if (NOT DEFINED YOCTO)
+    add_subdirectory(tools)
+    set (EMUGEN_GENERATOR ${CMAKE_BINARY_DIR}/external/android-emugl/host/tools/emugen/emugen)    
+else()
+    set (EMUGEN_GENERATOR emugen)
+    add_custom_target (emugen)
+endif()
 add_subdirectory(libs)
