Add support for proximity sensorAdd documentation about DBUS interfaceMake Anbox compile with Clang 9.0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -395,6 +395,7 @@ target_link_libraries(anbox-core
   pthread
   process-cpp
   emugl_common
+  fmt::fmt
   GLESv1_dec
   GLESv2_dec
   renderControl_dec
