snap: fix failure on cloning SwiftShader repository
snapcraft uses '--recursive-submodules' option by default to clone all
dependencies if source-type is 'git'. Therefore the option leads the failure
on cloning the project by 'git-hooks' submodule. In the case, the failure is
asking username/password to do so.

Use 'override-pull' to prevent the issue as the following
1. clone the project w/o submodules.
2. use 'sed' command to remove 'git-hooks' submodule.
3. update submodules

'git-hooks' submodule is not necessary to build the project[1]

[1]: https://issuetracker.google.com/issues/190626829

Fix: https://github.com/anbox/anbox/issues/1922

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -209,9 +209,15 @@ parts:
 
   swiftshader:
     plugin: cmake
-    source: https://swiftshader.googlesource.com/SwiftShader
-    source-type: git
-    source-commit: b6e8c3f0f4830887d69ba765a922ac3c40e81dd9
+    build-packages:
+      - sed
+    override-pull: |
+      set -ex
+      git clone https://swiftshader.googlesource.com/SwiftShader .
+      git checkout b6e8c3f0f4830887d69ba765a922ac3c40e81dd9
+      sed -i '/git-hooks/d' .gitmodules
+      git submodule update --init --recursive
+      set +ex
     organize:
       libEGL.so: lib/anbox/swiftshader/libEGL.so
       libGLES_CM.so: lib/anbox/swiftshader/libGLES_CM.so
