add "layout" section to snapcraft.yaml to provide mapping to amdgpu.ids file on Ubuntu

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,6 +22,10 @@ plugs:
     bus: session
     name: org.anbox
 
+layout:
+  /usr/share/libdrm:
+    bind: $SNAP/usr/share/libdrm
+
 apps:
   anbox:
     command: bin/desktop-launch $SNAP/bin/anbox-wrapper.sh
